# primecoin

./: .gitignore  CMakeLists.txt  INSTALL  MINGW_HELL  README.md  WORK-IN-PROGRESS  ___TODO.txt  bitcoin-qt-win64.pro  bitcoin-qt.pro
cmake/: FindGMP.cmake  FindOpenCL.cmake
contrib/homebrew/: main_poolminer.cpp.patch  makefile.osx.patch  serialize.h.patch
contrib/macdeploy/: fancy.plist  macdeployqtplus
doc/: README.md  README_windows.txt  build-msw.md  build-osx.md  build-solaris.md  build-unix.md  changes-hp.txt
share/qt/: Info.plist  clean_mac_info_plist.py
src/: bignum.h  bitcoinrpc.cpp  bitcoinrpc.h  block.h  blockprovider.h  checkpointsync.cpp  init.cpp  main.cpp  main.h  main_config.cpp  main_mining.cpp  main_perftest.cpp  main_poolminer.cpp  main_poolminer.h  main_poolminer.hpp  makefile.linux-mingw  makefile.linux-mingw64  makefile.mingw  makefile.mingw64  makefile.osx  makefile.solaris  makefile.unix  net.cpp  opencl.h  prime.cpp  prime.h  primeminer_conx.hpp  primeminer_conx_msg.hpp  primeminer_conx_msg_type.hpp  primeminer_test.bat  primes.cpp  rpcmining.cpp  serialize.h  util.h  version.cpp  xpmclient.cpp  xpmclient.h
src/gpu/: fermat.cl  sieve.cl
src/qt/: bitcoin.cpp  bitcoingui.cpp  bitcoinstrings.cpp  guiutil.cpp
src/qt/forms/: aboutdialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_nb.ts  bitcoin_nl.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_pt_PT.ts  bitcoin_ro_RO.ts  bitcoin_ru.ts  bitcoin_sk.ts  (+7 more)
src/qt/res/: bitcoin-qt.rc
